--- a/contact.html
+++ b/contact.html
@@ -51,13 +51,13 @@
                   <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="about.html"> About</a>
+                  <a class="nav-link" href="about.html"> About us</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="gallery.html"> Gallery </a>
                 </li>
                 <li class="nav-item active">
-                  <a class="nav-link" href="contact.html">Contact us</a>
+                  <a class="nav-link" href="contact.html">Contact</a>
                 </li>
               </ul>
 
