Updated website/ contact / Maps / CopyWrite

--- a/contact.html
+++ b/contact.html
@@ -168,7 +168,9 @@
         <div class="col-md-3">
           <div class="info_insta">
             <h5>
-              Instagram
+              <a href="https://www.instagram.com/ouarab.mouad">
+                Instagram
+              </a>
             </h5>
             
           </div>
@@ -181,19 +183,19 @@
             <div>
               <img src="images/location-white.png" alt="">
               <p>
-                UK Lever Pool
+                Morocco, Marrakesh
               </p>
             </div>
             <div>
               <img src="images/telephone-white.png" alt="">
               <p>
-                05 53434347
+                +212 644547293
               </p>
             </div>
             <div>
               <img src="images/envelope-white.png" alt="">
               <p>
-                contact@leverpool.com
+                warabmoad@gmail.com
               </p>
             </div>
           </div>
@@ -208,7 +210,7 @@
   <footer class="container-fluid footer_section">
     <p>
       &copy; <span id="displayYear"></span> All Rights Reserved By
-      <a href="https://leverpool.com/">Widade Atlatic Club</a>
+      <a href="https://github.com/ouaarab-mouad/">Mouad</a>
     </p>
   </footer>
   <!-- footer section -->
