--- a/gallery.html
+++ b/gallery.html
@@ -177,8 +177,8 @@
         </div>
         <div class="col-md-3">
           <div class="info_insta">
-            <h5>
-              Instagram
+            <h5><a href="https://www.instagram.com/ouarab.mouad">
+              Instagram</a>
             </h5>
           </div>
         </div>
@@ -190,19 +190,19 @@
             <div>
               <img src="images/location-white.png" alt="">
               <p>
-                UK Lever Pool
+                Morocco, Marrakesh
               </p>
             </div>
             <div>
               <img src="images/telephone-white.png" alt="">
               <p>
-                +01 1234567890
+                +212 644547293
               </p>
             </div>
             <div>
               <img src="images/envelope-white.png" alt="">
               <p>
-                contact@leverpool.com
+                warabmoad@gmail.com
               </p>
             </div>
           </div>
@@ -217,7 +217,7 @@
   <footer class="container-fluid footer_section">
     <p>
       &copy; <span id="displayYear"></span> All Rights Reserved By
-      <a href="https://leverpool.com/">leverpool</a>
+      <a href="https://github.com/ouaarab-mouad/">Moaud</a>
     </p>
   </footer>
   <!-- footer section -->
