--- a/about.html
+++ b/about.html
@@ -156,7 +156,9 @@
         <div class="col-md-3">
           <div class="info_insta">
             <h5>
+              <a href="https://www.instagram.com/ouarab.mouad">
               Instagram
+            </a>
             </h5>
             <div class="insta_container">
               
@@ -171,7 +173,7 @@
             <div>
               <img src="images/location-white.png" alt="">
               <p>
-                Lever Pool 
+                Morocco, Marrakesh
               </p>
             </div>
             <div>
@@ -183,7 +185,7 @@
             <div>
               <img src="images/envelope-white.png" alt="">
               <p>
-                contact@leverpool.com
+               warabmoad@gmail.com
               </p>
             </div>
           </div>
@@ -198,7 +200,7 @@
   <footer class="container-fluid footer_section">
     <p>
       &copy; <span id="displayYear"></span> All Rights Reserved By
-      <a href="https://widade.com/">Widade Atlatic Club</a>
+      <a href="https://github.com/ouaarab-mouad/">Mouad</a>
     </p>
   </footer>
   <!-- footer section -->
