--- a/index.html
+++ b/index.html
@@ -533,7 +533,9 @@
         <div class="col-md-3">
           <div class="info_insta">
             <h5>
+              <a href="https://www.instagram.com/ouarab.mouad">
               Instagram
+            </a>
             </h5>
           </div>
         </div>
@@ -545,19 +547,19 @@
             <div>
               <img src="images/location-white.png" alt="">
               <p>
-                UK Lever Pool
+               Morocco, Marrakesh
               </p>
             </div>
             <div>
               <img src="images/telephone-white.png" alt="">
               <p>
-                +01 1234567890
+                +212 644457293
               </p>
             </div>
             <div>
               <img src="images/envelope-white.png" alt="">
               <p>
-                contact@leverpool.com
+                warabmoad@gmail.com
               </p>
             </div>
           </div>
@@ -572,7 +574,7 @@
   <footer class="container-fluid footer_section">
     <p>
       &copy; <span id="displayYear"></span> All Rights Reserved By
-      <a href="https://html.design/">LiverPool</a>
+      <a href="https://github.com/ouaarab-mouad/">LiverPool</a>
     </p>
   </footer>
   <!-- footer section -->
@@ -581,9 +583,9 @@
   <script type="text/javascript" src="js/bootstrap.js"></script>
   <script type="text/javascript" src="js/custom.js"></script>
   <!-- Google Map -->
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap">
-  </script>
-  <!-- End Google Map -->
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCh39n5U-4IoWpsVGUHWdqB6puEkhRLdmI&callback=myMap&center=31.634915,-7.998197">
+</script>
+<!-- End Google Map -->
 
 </body>
 
